2007-05-01  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade:
	* appearance-desktop.c:
	* appearance-desktop.h:
  * appearance-main.h:
  * Makefile.am:
  * gnome-wp-*.[ch]:
  
  Implement the the Desktop tab. Drag and drop still has to be done.

2007-05-01  Thomas Wood  <thos@gnome.org>

	* appearance.glade: Combine Themes and Appearance tabs

2007-05-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-ui.c: (ui_init):
	* appearance.glade: convert all instances GtkOptionMenu to
	GtkComboBox

2007-05-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main):
	* appearance-ui.c: (ui_init):
	* appearance-ui.h:
	* appearance.h: we don't need to unref the GConfPropertyEditors

2007-05-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main):
	* appearance-ui.c:
	* appearance-ui.h:
	* appearance.h:
	* appearance.glade:

	fill the Preferences tab with life

2007-05-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (init_appearance_data), (main):
	* appearance.h:

	include config.h before anything else and add a GConfClient
	reference to the AppearanceData struct

2007-04-30  Thomas Wood  <thos@gnome.org>

	* appearance-main.c: (main):
	* appearance.h:

	Include config.h and add some comments.

2007-04-30  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade: replace occurrences of "colour" with "color".

2007-04-30  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: use GNOMECC_GLADE_DIR like the other capplets
	do
	* appearance-main.c: (init), (main): move initialization to
	a separate function, fix glade file location, leak less
	memory, and init g_threads

2007-04-30  Thomas Wood  <thos@gnome.org>

	* appearance-main.c:
	* appearance-themes.c:
	* appearance-themes.h:
	* appearance.h:

	Add license headers
